--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest --verbose",
     "watch": "nodemon index.js"
   },
   "author": "",
@@ -17,6 +17,10 @@
     "mongoose": "^5.6.4"
   },
   "devDependencies": {
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1"
-  }
+  },
+	"jest": {
+		"testEnvironment": "node"
+	}
 }
