--- a/osa4/blogilista/package.json
+++ b/osa4/blogilista/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-		"test": "jest --verbose",
-    "watch": "nodemon index.js"
+    "start": "NODE_ENV=production node index.js",
+    "test": "NODE_ENV=test jest --verbose",
+    "watch": "NODE_ENV=development nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,9 +18,10 @@
   },
   "devDependencies": {
     "jest": "^24.8.0",
-    "nodemon": "^1.19.1"
+    "nodemon": "^1.19.1",
+    "supertest": "^4.0.2"
   },
-	"jest": {
-		"testEnvironment": "node"
-	}
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
